# securedrop-log

./: LICENSE  MANIFEST.in  Makefile  README.md  changelog.md  pyproject.toml  update_version.sh
.circleci/: config.yml
.github/workflows/: ci.yml
debian/: control  gbp.conf  rules  securedrop-log.install
