[tool.poetry]
name = "securedrop-log"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.9"
redis = "=3.3.11"

[tool.poetry.dev-dependencies]
flake8 = ">=6"
mypy = ">=1.4.1"
types-redis = "^3.3.11"
types-setuptools = "*"

[tool.mypy]
python_version = "3.9"
scripts_are_modules = true
files = [
    "*.py",
    "securedrop-log",
    "securedrop-log-saver",
    "securedrop-redis-log",
]
